--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <div class="selection-wrap">
         <header>
-            <h1 class="game-title">Хроники Миров ✨❄️</h1>
+            <div class="image-wrap card-style-photo">
+            <img src="image.png" alt="Stuttgart Winter" class="event-photo">
+            </div>
+            <h1 class="game-title">Stuttgart Talks</h1>
             <div id="status-selection" class="status-selection">Подключение...</div>
         </header>
 
