особенность: Внедрить игровую логику и пользовател ьский интерфейс для выбора команды и игрового процесса
- Добавлено game.js для управления игровой логикой, включая роли игроков, управление командой и управление задачами.
- Создано login.js для аутентификации пользователя и выбора команды с назначением ролей.
- Разработаны main.css и index.css для оформления игрового интерфейса и экрана входа в систему.
- Добавлен эффект снега на экране выбора и в игровом интерфейсе для визуального улучшения.
- Интегрирована Supabase для управления внутренними данными, включая данные игроков и команд.
- Реализованы модальности для настройки команды и управления торговлей.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Выбор Команды</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="selection-body">
@@ -68,7 +68,6 @@
             </button>
         </div>
     </div>
-
-    <script type="module" src="script.js"></script>
+    <script type="module" src="login.js"></script>
 </body>
 </html>
