Добавлены новые роли: Шпион и Кладоискатель; обновлена логика кнопок и исправлены ошибки в логике входа.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <button class="role-card" data-role="Guardian">🛡️ Хранитель</button>
                 <button class="role-card" data-role="Saboteur">💣 Диверсант</button>
                 <button class="role-card" data-role="Negotiator">🤝 Переговорщик</button>
+                <button class="role-card" data-role="Spy">🕵️‍♂️ Шпион</button>
+                <button class="role-card" data-role="Scavenger">🧤 Кладоискатель</button>
             </div>
             
             <div class="name-input-container">
