--- a/main-screen.html
+++ b/main-screen.html
@@ -38,6 +38,9 @@
                 <button class="icon-btn" onclick="openCraftModal()" style="color: #d946ef;">⚒️</button>
                 <button id="btnShowTrades" class="secondary hidden" onclick="openIncomingTrades()">Обмен 🤝</button>
                 <button id="btnLogout" class="icon-btn" style="color:var(--accent-red)">🚪</button>
+                <button id="btnSpyAction" class="icon-btn hidden" onclick="openSpyModal()">🕵️‍♂️</button>
+                <button id="btnScavenge" class="icon-btn hidden" onclick="scavengeSnow()">🧤</button>
+                <button id="btnGuardianWarm" class="icon-btn hidden" onclick="guardianWarmUp()">🔥</button>
             </div>
         </header>
 
